# Chip8-Interpreter

./: CMakeLists.txt  README.md  chip8.cpp  chip8.h  main.cpp  platform.cpp  platform.h  settings.json
